# catalog

./: .gitignore  .vercelignore  EXECUTIVE_SUMMARY.md  README.md  SYSTEM_DESIGN.md  benchmark.py  demo.py  deploy.sh  pyproject.toml  requirements.txt  vercel.json
api/: index.py
catalog/: db.py  embeddings.py  export.py  index.py  ingest.py  main.py  models.py  search.py  tree_db.py  tree_embeddings.py  tree_parser.py  tree_search.py  utils.py
docs/: PHYLOGENETIC_TREE_GUIDE.md
public/: app.js  index.html  styles.css
scripts/: populate_trees.py  reembed_trees.py
static/: app.js  index.html  styles.css
